Semi-Fixed clipping arrow when browser is minimized

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -95,9 +95,10 @@ h2, p {
 }
 
 .arrow {
+    top: -10vh;
     height: 10%;
     width: 10%;
-    margin-top: 3vh;
+    margin-top: 2vh;
     padding: 10px;
     font-size: 50px;
 }
